--- a/src/components/Cart/CartItem/CartItem.module.css
+++ b/src/components/Cart/CartItem/CartItem.module.css
@@ -70,7 +70,8 @@
   background-color: rgb(209, 15, 15);
 }
 
-.actions__deleteItemBtn img {
-  width: 25px;
-  height: 25px;
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
