--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -22,7 +22,7 @@
   border: none;
   border-radius: 15px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0.5rem;
   cursor: pointer;
@@ -45,14 +45,16 @@
 }
 
 .cart__counter {
-  height: 40px;
-  width: 40px;
+  height: 20px;
+  width: 20px;
   border: 1px solid var(--secondary-color);
   border-radius: 50%;
   color: var(--dark-color);
   background: var(--light-color);
-  font-size: 25px;
+  font-size: 14px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: -12px;
+  margin-top: -4px;
 }
